style: adjust thoughts card spacing; fix toggle bug

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -958,7 +958,7 @@ body:not(.home) .page__content h6 * {
 .thoughts-card__meta {
   font-size: 1.2em;
   color: $morandi-muted;
-  margin-bottom: 0.18em;
+  margin-bottom: 0.22em;
   line-height: 1.55;
 }
 
